# fitness

./: .env  .env-template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  makefile  pyproject.toml  requirements.txt
alembic/: env.py
api/: config.py  main.py
api/alembic/: env.py
api/auth/: auth.py  base_config.py  hasher.py  login_form.py  manager.py  models.py  router.py  schemas.py  utils.py
api/db/: __init__.py  base.py  base_class.py  dals.py  models.py  session.py
api/models/: user.py
api/pages/: router.py  template.py
api/pages/main_page/: router.py
api/pages/profile/: router.py
api/templates/: base.html  login.html  main_page.html  plot.html
api/weigh_ins/: models.py  router.py  schemas.py  service.py
docker/: app.sh
frontend/templates/: base.html
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 7bf4812d7c93_.py  a1c0e7e3b5f1_create_tables_for_localdb.py  b631151c35ef_.py
src/app/api/: deps.py
src/app/api/auth/: base_config.py  hasher.py  schemas.py  utils.py
src/app/api/receipts/: router.py  schemas.py
src/app/api/weight_ins/: router.py  schemas.py
src/app/auth/: utils.py
src/app/auth/actions/: auth.py  users.py
src/app/auth/routers/: __init__.py  login_router.py  user_router.py
src/app/core/: __init__.py  config.py  security.py
src/app/db/: __init__.py  dals.py  models.py  session.py
src/app/pages/: template.py
src/app/templates/: index.html
src/app/tests/: conftest.py  utils.py
src/app/weigh_ins/: router.py  service.py
(+10 files in other folders)
