[build-system]
requires = ["setuptools == 69.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "fitness-app"
version = "0.1.0"
description = "pet-project"
dependencies = [
    "fastapi==0.105.0",
    "uvicorn~=0.24.0.post1",
    "SQLAlchemy~=2.0.23",
    "alembic~=1.13.0",
    "email-validator~=2.1.0.post1",
    "passlib~=1.7.4",
    "asyncpg~=0.29.0",
    "pydantic==2.5.2",
    "Jinja2~=3.1.2",
    "passlib~=1.7.4",
]

[project.optional-dependencies]
dev = [
    "black==24.1.1",
    "isort~=5.12.0",
    "flake8~=7.0.0",
    "mypy~=1.7.0",
    "pytest==7.4.4",
    "pytest-cov~=4.1.0",
    "pylama[radon,mypy,toml]",
    "pre-commit",
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false

[tool.pylama.linter.pycodestyle]
max_line_length = 79
[tool.pylama.linter.pylint]
max_line_length = 79
[tool.pylama.linter.radon]
no_assert = true


[alembic]